mobile optimization: img comflict and alignment resolved

--- a/app/assets/styles/modules/_roomFeatures.css
+++ b/app/assets/styles/modules/_roomFeatures.css
@@ -1,19 +1,18 @@
 .roomFeatures{
-
+  text-align: center;
   & img {
     min-width: 360px;
-    max-width: 100%;
+    width: 100%;
     /*height: 240px;*/
   }
 
   &--textContent{
-    text-align: center;
-
 
     &-title{
       font-size: 1.8rem;
       font-weight: bold;
       padding-left: 10px;
+      padding-right: 10px;
     }
     &-line{
       margin: 5px;
@@ -34,16 +33,19 @@
 
     margin-left: 25px;
     & img {
-      image-size: responsive;
+      max-width: 100%;
+      height: 325px;
     }
     &--textContent{
+      min-width: 250px;
+      width: 330px;
+      height: 325px;
       text-align: left;
       padding-top: 20px;
       padding-left: 15px;
       background-color: $lighterGold;
-      max-width: 100%;
+
       &-title{
-        width: 260px;
         padding-right: 10px;
         padding-bottom: 10px;
       }
@@ -62,15 +64,16 @@
   @mixin atLarge {
     margin-left: 50px;
     & img {
-      width: 620px;
+      // max-width: 620px;
       height: 420px;
 
     }
     &--textContent{
       padding-top: 50px;
       padding-left: 50px;
-      width: 380px;
-      height: 420px;
+      min-width: 400px;
+      min-height: 420px;
+      height: 100%;
 
       &-title{
         width: 340px;
